# brainsoft_use_case

./: README.md  cli_client.py  pyproject.toml  requirements.txt  streamlit_app.py
src/agent/: retrieval_agent.py
src/data_model/: question.py
src/model/: model.py
src/rest/: api.py  controller.py
src/ui/: ui.py
src/utils/: secret_manager.py  vectara_manager.py
tests/src/agent/: test_retrieval_agent.py
